# nutrition-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
src/assistant/: __main__.py  agent.py  auth.py  config.py  conversation.py  db.py  i18n.py  meals.py  nutrition.py  telegram_bot.py
src/assistant/commands/: __init__.py  clear.py  day_summary.py  destroy.py  profile.py  start.py  timezone.py  week_summary.py
