[project]
name = "assistant"
version = "0.1.0"
description = "Nutrition Couch: a Telegram bot that estimates nutrition facts from food photos/text and tracks daily/weekly intake"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai-slim[mcp,google]>=1.0.5",
    "python-telegram-bot>=21.0",
    "pydantic-settings>=2.5",
    "aiosqlite>=0.20",
    "telegramify-markdown>=1.2.0",
    "pydantic-ai>=2.9.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "tzdata>=2025.1",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/assistant"]
